Add simple minio connector and storage tests